--- a/front-end/src/WishSellTabs.css
+++ b/front-end/src/WishSellTabs.css
@@ -2,7 +2,3 @@
     padding: 30px;
     margin: 5%;
 }
-
-h1 {
-  padding: 10px;
-}
